--- a/Array.ipynb
+++ b/Array.ipynb
@@ -58,18 +58,6 @@
     "    def clear(self):\n",
     "        self.n = 0\n",
     "        self.size =1\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        result = ''\n",
-    "        for i in range(self.n):\n",
-    "            result = result + str(self.A[i]) + ', '\n",
-    "        return '[ ' + result[:-2] + ']'\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        if index < self.n:\n",
-    "            return self.A[index]\n",
-    "        else:\n",
-    "            return \"IndexError- Index out of range\"\n",
     "\n",
     "    def find(self,item):\n",
     "        for i in range(self.n):\n",
@@ -99,7 +87,18 @@
     "                self.A[i] = self.A[i+1]\n",
     "\n",
     "            self.n -= 1\n",
-    "    \n"
+    "            \n",
+    "    def __repr__(self):\n",
+    "        result = ''\n",
+    "        for i in range(self.n):\n",
+    "            result = result + str(self.A[i]) + ', '\n",
+    "        return '[ ' + result[:-2] + ']'\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        if index < self.n:\n",
+    "            return self.A[index]\n",
+    "        else:\n",
+    "            return \"IndexError- Index out of range\"\n"
    ]
   },
   {
